# kinect_odom

./: CMakeLists.txt  README.md  main.cpp  rcv.hpp
